styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');

body {
    font-family: "Roboto", Helvetica, sans-serif;
    margin: 0;
    background: url(/pictures/back1.jpg);
}

/* HEADER */
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: white;
    background-color: rgba(255, 255, 255, 0.45);
    padding: 0px 50px;
    box-shadow: 2px 2px 12px 6px rgba(0, 0, 0, 0.2);
    backdrop-filter: blur(15px);
}

ul {
    list-style-type: none;
    padding: 0px;
    display: flex;
    gap: 25px;
    font-size: 20px;
}

a {
    text-decoration: none;
    color: white;
}

/* INFO */
.info {
    background-color: rgba(255, 255, 255, 0.45);
    box-shadow: 2px 2px 12px 6px rgba(0, 0, 0, 0.2);
    padding: 50px;
    margin: 100px;
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    gap: 100px;
}

.info-container {
    display: flex;
    flex-direction: column;
}

.info-title {
    color: rgb(0, 0, 0);
    font-size: 48px;
    font-weight: 900;
    margin: 0;
}

.info-text {
    font-size: 18px;
    font-weight: 400;
}

.button-info {
    background-color: #3882f6;
    color: white;
    font-weight: 700;
    border: 0;
    width: 100px;
    padding: 10px 20px;
    border-radius: 10px;
}

.info-picture {
    width: 500px;
    border-radius: 10px;
    box-shadow: 2px 2px 12px 6px rgba(0, 0, 0, 0.2);
}

/* MID-SECTION */
.mid-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 50px;
    margin: 50px 100px;
}

.mid-groups {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 50px;
    flex-wrap: wrap;
}

.group {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
}

.mid-title {
    font-size: 36px;
    font-weight: bold;
}

.mid-text {
    font-size: 18px;
}

.mid-picture {
    height: 200px;
    border-radius: 10px;
    box-shadow: 2px 2px 12px 6px rgba(0, 0, 0, 0.2);
}

/* QUOTE */
.quote {
    background-color: rgba(255, 255, 255, 0.45);
    display: flex;
    flex-direction: column;
    margin: 50px 0px;
    padding: 50px 200px;
}

.quote-text {
    text-align: left;
    font-size: 24px;
}

.quote-author {
    text-align: right;
}

/* BOTTON */
.bottom {
    background-color: #3882f6;
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 25px 25px;
    margin: 100px 100px;
    border-radius: 10px;
    box-shadow: 2px 2px 12px 6px rgba(0, 0, 0, 0.2);
}

.bottom-container {
    display: flex;
    gap: 120px;
    align-items: center;
    justify-content: space-between;
    color: white;
}

.bottom-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.bottom-title {
    font-size: 22px;
    font-weight: 700;
    margin-top: 10px;
    margin-bottom: 0;
}

.button-bottom {
    background-color: #3882f6;
    color: white;
    font-weight: 700;
    border: 1px solid white;
    width: 175px;
    height: 50px;
    padding: 10px 20px;
    border-radius: 10px;
}

/* FOOTER */
.footer {
    text-align: center;
    color: white;
    background-color: rgba(255, 255, 255, 0.45);
    padding: 10px 0px;
}

